Trying to fix issues with sonar test coverage.

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <junit.version>4.12</junit.version>
         <maven.build.timestamp.format>yyyy-MM-dd HH:mm</maven.build.timestamp.format>
         <mockito.version>1.10.19</mockito.version>
+        <sonar.jacoco.reportPath>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPath>
     </properties>
 
     <dependencies>
